--- a/faves-add-old.html
+++ b/faves-add-old.html
@@ -23,20 +23,20 @@ gtag('config', 'UA-61835364-1');
       type="application/rss+xml"
       href="https://34t.farbatest.com/feed"
     >
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/bootstrap/bootstrap-grid.min.css?v=1734440221">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/ulej-tips-styles.css?v=1734440214">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/bootstrap/bootstrap-grid.min.css?v=1734440221">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/ulej-tips-styles.css?v=1734440214">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto+Condensed:400,400i,700,700i&amp;amp;subset=cyrillic&amp;amp;display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Spectral:wght@500;700&amp;amp;display=swap">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/vendor.css?v=1734440214">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/style.css?v=1734440215">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/select2.css?v=1734440213">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/main.css?v=1734440211">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/slick.css?v=1734440213">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/https://34travel.me//themes/travel/css/new_post_template.css?v=1734440211">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/custom.css?v=1734440206">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/jquery-ui.css?v=1734440207">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/custom-new.css?v=1734440206">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/all_custom.css?v=1734440207">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/vendor.css?v=1734440214">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/style.css?v=1734440215">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/select2.css?v=1734440213">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/main.css?v=1734440211">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/slick.css?v=1734440213">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/https://34t.farbatest.com//themes/travel/css/new_post_template.css?v=1734440211">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/custom.css?v=1734440206">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/jquery-ui.css?v=1734440207">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/custom-new.css?v=1734440206">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/all_custom.css?v=1734440207">
     <link rel="stylesheet" type="text/css" href="./css/1.css">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" type="text/css" href="./css/magnific.min.css">
@@ -52,8 +52,8 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
     <meta name="twitter:site" content="@34travelby">
     <meta name="twitter:title" content="Лондон – большой гайд от 34travel">
     <meta name="twitter:description" content="Достопримечательности, музеи, парки, маркеты и секретные бары Лондона – в большом путеводителе. Enjoy!">
-    <meta name="twitter:image" content="https://34travel.me/media/posts/648037f252ee9-OG-guide.jpg">
-    <meta property="og:image" content="https://34travel.me/media/posts/648037f252ee9-OG-guide.jpg">
+    <meta name="twitter:image" content="https://34t.farbatest.com/media/posts/648037f252ee9-OG-guide.jpg">
+    <meta property="og:image" content="https://34t.farbatest.com/media/posts/648037f252ee9-OG-guide.jpg">
     <meta property="og:title" content="Лондон – большой гайд от 34travel">
     <meta property="og:url" content="https://34t.farbatest.com/post/london">
     <meta property="og:description" content="Достопримечательности, музеи, парки, маркеты и секретные бары Лондона – в большом путеводителе. Enjoy!">
@@ -2169,7 +2169,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
         <div class="ulej-tips ulej-tips--yellow" style="background-color: #c1bc6f !important;">
           <section class="ulej-tips-content">
             <div class="ulej-tips-header">
-              <img src="https://34travel.me/media/posts/63ea911625d97-noun-donation-3320498.svg" alt="hand with heart" class="ulej-tips-img">
+              <img src="https://34t.farbatest.com/media/posts/63ea911625d97-noun-donation-3320498.svg" alt="hand with heart" class="ulej-tips-img">
               <h2 class="ulej-tips-heading" style="color: #000000 !important;">Отблагодарить 34travel</h2>
             </div>
             <div class="ulej-tips-body">
@@ -2210,7 +2210,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/60f825b8972e3-850-rus.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/60f825b8972e3-850-rus.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Go to Ukraine</span>
@@ -2241,7 +2241,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/5fb7b5bb92946-751.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/5fb7b5bb92946-751.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Едем в Беларусь</span>
@@ -2271,7 +2271,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/61092fe26a7d4-tiz-muz.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/61092fe26a7d4-tiz-muz.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Место дня</span>
@@ -2301,7 +2301,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/587f50abcaf63-Untitled-1.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/587f50abcaf63-Untitled-1.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Фото</span>
@@ -2332,7 +2332,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/587617372727a-erevan.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/587617372727a-erevan.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -2362,7 +2362,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/5931246377ed4-tiz.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/5931246377ed4-tiz.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Едем в Беларусь</span>
@@ -2396,7 +2396,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                   </svg>
                 </div>
               </div>
-              <img src="https://34travel.me/media/posts/66aa1652ae1b1-Tizer.jpg" alt="Большая афиша европейских событий августа (обновляется)">
+              <img src="https://34t.farbatest.com/media/posts/66aa1652ae1b1-Tizer.jpg" alt="Большая афиша европейских событий августа (обновляется)">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
                   Большая афиша европейских событий августа (обновляется)
@@ -2425,7 +2425,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/66a246e9a9e9f-Tizer.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/66a246e9a9e9f-Tizer.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Путешествия по Литве</span>
@@ -2455,7 +2455,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                   </svg>
                 </div>
               </div>
-              <img src="https://34travel.me/media/posts/66a8bb204aaee-tizer-guide-2.jpg" alt="Шанхай">
+              <img src="https://34t.farbatest.com/media/posts/66a8bb204aaee-tizer-guide-2.jpg" alt="Шанхай">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
                   <span class="b-news__short__gide">ГАЙД:</span>
@@ -2485,7 +2485,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/66978f08d5f2b-Tizer.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/66978f08d5f2b-Tizer.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Едем в Беларусь</span>
@@ -2516,7 +2516,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/669534798c294-Tizer-2.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/669534798c294-Tizer-2.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -2546,7 +2546,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
                   </svg>
                 </div>
               </div>
-              <img src="https://34travel.me/media/posts/6694f2cc41b54-Tizer.jpg" alt="Last call: Куда дешево слетать в августе?">
+              <img src="https://34t.farbatest.com/media/posts/6694f2cc41b54-Tizer.jpg" alt="Last call: Куда дешево слетать в августе?">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
                   Last call: Куда дешево слетать в августе?
@@ -2673,7 +2673,7 @@ var socialLikesButtons={twitter:{counterUrl:'https://opensharecount.com/count.js
             </p>
             <ul class="footer__menu">
               <li>
-                <a href="https://34travel.me/gotobelarus">
+                <a href="https://34t.farbatest.com/gotobelarus">
                   GO TO BELARUS!
                 </a>
               </li>
