--- a/post.html
+++ b/post.html
@@ -23,20 +23,20 @@
       type="application/rss+xml"
       href="https://34t.farbatest.com/feed"
     >
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/bootstrap/bootstrap-grid.min.css?v=1734440221">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/ulej-tips-styles.css?v=1734440214">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/bootstrap/bootstrap-grid.min.css?v=1734440221">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/ulej-tips-styles.css?v=1734440214">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto+Condensed:400,400i,700,700i&amp;amp;subset=cyrillic&amp;amp;display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Spectral:wght@500;700&amp;amp;display=swap">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/vendor.css?v=1734440214">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/style.css?v=1734440215">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/select2.css?v=1734440213">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/main.css?v=1734440211">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/slick.css?v=1734440213">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me/https://34travel.me//themes/travel/css/new_post_template.css?v=1734440211">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/custom.css?v=1734440206">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/jquery-ui.css?v=1734440207">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/custom-new.css?v=1734440206">
-    <link rel="stylesheet" type="text/css" href="https://34travel.me//themes/travel/css/all_custom.css?v=1734440207">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/vendor.css?v=1734440214">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/style.css?v=1734440215">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/select2.css?v=1734440213">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/main.css?v=1734440211">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/slick.css?v=1734440213">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/https://34t.farbatest.com//themes/travel/css/new_post_template.css?v=1734440211">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/custom.css?v=1734440206">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/jquery-ui.css?v=1734440207">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/custom-new.css?v=1734440206">
+    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com//themes/travel/css/all_custom.css?v=1734440207">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" type="text/css" href="./css/magnific.min.css">
     <link rel="stylesheet" type="text/css" href="./css/custom2.css?v=1696596981">
@@ -46,8 +46,8 @@
     <meta name="twitter:site" content="@34travelby">
     <meta name="twitter:title" content="Вильнюс">
     <meta name="twitter:description" content="Отборные достопримечательности, кафе и бары Вильнюса в новом большом путеводителе от 34travel.">
-    <meta name="twitter:image" content="https://34travel.me/media/posts/6662dff94427e-1200.jpg">
-    <meta property="og:image" content="https://34travel.me/media/posts/6662dff94427e-1200.jpg">
+    <meta name="twitter:image" content="https://34t.farbatest.com/media/posts/6662dff94427e-1200.jpg">
+    <meta property="og:image" content="https://34t.farbatest.com/media/posts/6662dff94427e-1200.jpg">
     <meta property="og:title" content="Вильнюс">
     <meta property="og:url" content="https://34t.farbatest.com/post/vilnyus">
     <meta property="og:description" content="Отборные достопримечательности, кафе и бары Вильнюса в новом большом путеводителе от 34travel.">
@@ -284,7 +284,7 @@
         <div class="ulej-tips ulej-tips--yellow" style="background-color: #c1bc6f !important;">
           <section class="ulej-tips-content">
             <div class="ulej-tips-header">
-              <img src="https://34travel.me/media/posts/63ea911625d97-noun-donation-3320498.svg" alt="hand with heart" class="ulej-tips-img">
+              <img src="https://34t.farbatest.com/media/posts/63ea911625d97-noun-donation-3320498.svg" alt="hand with heart" class="ulej-tips-img">
               <h2 class="ulej-tips-heading" style="color: #000000 !important;">Отблагодарить 34travel</h2>
             </div>
             <div class="ulej-tips-body">
@@ -325,7 +325,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/5b1e5c96afc34-620.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/5b1e5c96afc34-620.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -355,7 +355,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/5c18cd886aef8-620.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/5c18cd886aef8-620.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -385,7 +385,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/636b6841638f3-Tizer.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/636b6841638f3-Tizer.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -415,7 +415,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/5a828662a90ee-Untitled-1.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/5a828662a90ee-Untitled-1.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -445,7 +445,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/648c5adf6e712-tiz.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/648c5adf6e712-tiz.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -475,7 +475,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/59a6d4ca6483c-620.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/59a6d4ca6483c-620.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Идеи</span>
@@ -509,7 +509,7 @@
                   </svg>
                 </div>
               </div>
-              <img src="https://34travel.me/media/posts/66aa1652ae1b1-Tizer.jpg" alt="Большая афиша европейских событий августа (обновляется)">
+              <img src="https://34t.farbatest.com/media/posts/66aa1652ae1b1-Tizer.jpg" alt="Большая афиша европейских событий августа (обновляется)">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
                   Большая афиша европейских событий августа (обновляется)
@@ -538,7 +538,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/66a246e9a9e9f-Tizer.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/66a246e9a9e9f-Tizer.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Путешествия по Литве</span>
@@ -568,7 +568,7 @@
                   </svg>
                 </div>
               </div>
-              <img src="https://34travel.me/media/posts/66a8bb204aaee-tizer-guide-2.jpg" alt="Шанхай">
+              <img src="https://34t.farbatest.com/media/posts/66a8bb204aaee-tizer-guide-2.jpg" alt="Шанхай">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
                   <span class="b-news__short__gide">ГАЙД:</span>
@@ -598,7 +598,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/66978f08d5f2b-Tizer.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/66978f08d5f2b-Tizer.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Едем в Беларусь</span>
@@ -628,7 +628,7 @@
                   </svg>
                 </div>
               </div>
-              <img src="https://34travel.me/media/posts/6694f2cc41b54-Tizer.jpg" alt="Last call: Куда дешево слетать в августе?">
+              <img src="https://34t.farbatest.com/media/posts/6694f2cc41b54-Tizer.jpg" alt="Last call: Куда дешево слетать в августе?">
               <div class="b-news__short__big__info">
                 <h2 class="b-news__short__title">
                   Last call: Куда дешево слетать в августе?
@@ -656,7 +656,7 @@
                 </div>
               </div>
               <div class="b-news__short__image">
-                <img src="https://34travel.me/media/posts/668fa199e2f1c-Tizer.jpg" alt="" title="">
+                <img src="https://34t.farbatest.com/media/posts/668fa199e2f1c-Tizer.jpg" alt="" title="">
               </div>
               <div class="b-news__short__info">
                 <span class="b-news__short__category">Путешествия по Польше</span>
@@ -786,7 +786,7 @@
             </p>
             <ul class="footer__menu">
               <li>
-                <a href="https://34travel.me/gotobelarus">
+                <a href="https://34t.farbatest.com/gotobelarus">
                   GO TO BELARUS!
                 </a>
               </li>
