--- a/boxed.html
+++ b/boxed.html
@@ -134,11 +134,11 @@
                     <br>
                     Belarus!
                   </a>
-                  <a href="/gotoukraine" class="header__links_link header__link">
+                  <!-- <a href="/gotoukraine" class="header__links_link header__link">
                     Go to
                     <br>
                     Ukraine!
-                  </a>
+                  </a> -->
                 </div>
                 <div class="header__social_wrap flex__wrap">
                   <div class="header__social_open header__link">
