change radio to checkbox

--- a/My account-collection-change.html
+++ b/My account-collection-change.html
@@ -891,7 +891,7 @@
           <div class="edit-collection-types">
             <div class="square-radio edit-collection-type">
               <input
-                type="radio"
+                type="checkbox"
                 id="EditCollectionType1"
                 name="edit-collection-types"
                 checked
@@ -963,7 +963,7 @@
               </div>
             </div>
             <div class="square-radio edit-collection-type">
-              <input type="radio" id="EditCollectionType2" name="edit-collection-types">
+              <input type="checkbox" id="EditCollectionType2" name="edit-collection-types">
               <label for="EditCollectionType2">Удалить из избранного</label>
               <div class="edit-collection-types-icons">
                 <svg
