--- a/My_account_all forms/My_account_start.html
+++ b/My_account_all forms/My_account_start.html
@@ -578,6 +578,60 @@
           </div>
         </div>
       </div>
+      <div class="bottom__cookies">
+        <p class="bottom__cookies_text">
+          Мы используем cookies, чтобы сайт работал эффективно. Ознакомься с
+          <a href="#">условиями</a>
+          пользования, чтобы продолжить.
+        </p>
+        <div class="bottom__cookies_btns">
+          <button id="cookies__cancel">Отклонить</button>
+          <button id="cookies__accept" class="popup-with-form_faves" data-href="#form_cookies">Принять</button>
+        </div>
+      </div>
+      <div class="form_wrap form__edit_wrap form__popup mfp-hide" id="form_cookies">
+        <form
+          action=""
+          method=""
+          id="form_cookie"
+          class="form"
+        >
+          <p class="form_header">Управление файлами Cookies</p>
+          <div class="edit-collection-types">
+            <div class="square-radio edit-collection-type">
+              <input
+                type="checkbox"
+                id="productivity"
+                name="edit-collection-types"
+                checked
+              >
+              <label for="productivity">
+                Производительность (обязательно)
+                <span>Обеспечивают корректную работу сайта.</span>
+              </label>
+            </div>
+            <div class="square-radio edit-collection-type">
+              <input type="checkbox" id="analytics" name="edit-collection-types">
+              <label for="analytics">
+                Аналитика
+                <span>Позволяют понять, какие наши материалы читают больше.</span>
+              </label>
+            </div>
+            <div class="square-radio edit-collection-type">
+              <input type="checkbox" id="marketing" name="edit-collection-types">
+              <label for="marketing">
+                Маркетинг
+                <span>Позволяют нам показывать релевантную для тебя рекламу.</span>
+              </label>
+            </div>
+          </div>
+          <div class="form_button_long">
+            <button type="submit">
+              Применить
+            </button>
+          </div>
+        </form>
+      </div>
       <footer class="footer">
         <div class="footer__container clearfix">
           <div class="footer__section footer__section_logo">
@@ -788,10 +842,10 @@ _tmr.push({id: "3122769", type: "pageView", start: (new Date()).getTime()});
       <script type="text/javascript" src="https://34travel.me/themes/travel/js/slick.min.js?v=1676300069"></script>
       <script type="text/javascript" src="https://34travel.me/themes/travel/js/fastclick.min.js?v=1676300069"></script>
       <script type="text/javascript" src="https://34travel.me/themes/travel/js/main.js?v=1676300069"></script>
-      <script type="text/javascript" src="./js/magnific.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="./js/cookies.min.js"></script>
-      <script type="text/javascript" src="./js/jquery.validate.min.js"></script>
-      <script type="text/javascript" src="./js/custom.js?v=1676300069"></script>
+      <script type="text/javascript" src="../js/magnific.min.js?v=1676300069"></script>
+      <script type="text/javascript" src="../js/cookies.min.js"></script>
+      <script type="text/javascript" src="../js/jquery.validate.min.js"></script>
+      <script type="text/javascript" src="../js/custom.js"></script>
       <script type="text/javascript" async="" src="https://top-fwz1.mail.ru/js/dyn-goal-config.js?ids=3122769"></script>
       <div id="monica-content-root" class="monica-widget"></div>
     </body>
