--- a/Subscription - all forms/02 Subscription - plan + info - gift.html
+++ b/Subscription - all forms/02 Subscription - plan + info - gift.html
@@ -632,7 +632,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="subscription__tariffs_item col-12 col-us-6 col-sm-6 col-md-4 col-lg-4">
+                    <div class="subscription__tariffs_item blocked_subscription col-12 col-us-6 col-sm-6 col-md-4 col-lg-4">
                       <div>
                         <div class="subscription__tariff_title">
                           <div class="subscription__tariffs_check">
@@ -656,8 +656,7 @@
                                             любой момент.
                         </p>
                         <div class="subscription__tariffs_price">
-                          <span class="subscription__tariffs_old-price">€ 120</span>
-                          <span class="subscription__tariffs_new-price">€ 79,90</span>
+                          Coming soon
                         </div>
                       </div>
                     </div>
