--- a/colored-paywall.html
+++ b/colored-paywall.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/custom-new.css?v=1739543767">
     <style type="text/css">
 /*<![CDATA[*/
-.post-body{background-color: #a8bbc5 !important}
+/* .post-body{background-color: #a8bbc5 !important} */
 /*]]>*/
     </style>
     <title>Маршрут автопутешествия по Литве: едем в Молетай</title>
@@ -88,8 +88,13 @@
         </h1>
       </div>
     </div>
+    <style>
+      .post-body.post-bg {
+        background-color: #fff;
+      }
+    </style>
     <div id="wrapper">
-      <div class="post-body post-bg" style="background-color: #a8bbc5 !important">
+      <div class="post-body post-bg">
         <div class="post-meta__faves_wrap">
           <div class="container">
             <div class="wide-box">
