--- a/faves-add-new.html
+++ b/faves-add-new.html
@@ -1135,6 +1135,7 @@
         иллюстраций) возможна только с письменного разрешения редакции.
           </div>
           <div class="footer__bottom_text">Некоторые материалы могут содержать реферальные ссылки.</div>
+          <a href="#" class="footer__bottom_text">Управление файлами Cookies</a>
         </div>
       </div>
     </footer>
