--- a/Subscription - all forms/02 Subscription -auth_plan + info + myself + gift.html
+++ b/Subscription - all forms/02 Subscription -auth_plan + info + myself + gift.html
@@ -603,6 +603,7 @@
                               name="check_subscription"
                               value="month"
                             >
+                            <div class="subscription-square-radio"></div>
                             <label for="month">Подписка на месяц</label>
                           </div>
                           <span class=""></span>
@@ -629,6 +630,7 @@
                               value="year"
                               checked
                             >
+                            <div class="subscription-square-radio"></div>
                             <label for="year">Подписка на год</label>
                           </div>
                           <span class=""></span>
@@ -655,6 +657,7 @@
                               name="check_subscription"
                               value="family"
                             >
+                            <div class="subscription-square-radio"></div>
                             <label for="family">Семейная подписка на год</label>
                           </div>
                           <span class=""></span>
