--- a/Subscription - all forms/03 Subscription - buy AND 03 Subscription -pay-new.html
+++ b/Subscription - all forms/03 Subscription - buy AND 03 Subscription -pay-new.html
@@ -658,7 +658,7 @@
                       </div>
                     </form>
                   </div>
-                  <div class="subscription__terms subscription__terms_margin_big">
+                  <div class="subscription__terms subscription__terms_margin_big redBorder">
                     <input
                       type="checkbox"
                       class="custom-checkbox"
