--- a/letters/3/index.html
+++ b/letters/3/index.html
@@ -103,7 +103,7 @@
                                 <td style="background-color: #000000; padding: 19px 24px 19px 24px; width: 252px;">
                                   <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; color: #ffffff; text-decoration: none; font-size: 16px; line-height: 18px;">
                                     Оформить
-                                    <img src="./img/arrow.svg" width="63" style="padding-left: 30px;">
+                                    <img src="./img/arrow.png" width="63" style="padding-left: 30px;">
                                   </a>
                                 </td>
                               </tr>
@@ -135,22 +135,22 @@
                               <tr>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/telegram.svg" alt="Telegram" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/telegram.png" alt="Telegram" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/x.svg" alt="X" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/x.png" alt="X" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/instagram.svg" alt="Instagram" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/instagram.png" alt="Instagram" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/facebook.svg" alt="Facebook" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/facebook.png" alt="Facebook" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                               </tr>
