--- a/letters/5/index.html
+++ b/letters/5/index.html
@@ -90,22 +90,22 @@
                               <tr>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/telegram.svg" alt="Telegram" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/telegram.png" alt="Telegram" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/x.svg" alt="X" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/x.png" alt="X" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/instagram.svg" alt="Instagram" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/instagram.png" alt="Instagram" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                                 <td style="padding: 0 12px;">
                                   <a href="#" style="display: inline-block;">
-                                    <img src="./img/facebook.svg" alt="Facebook" style="display: block; width: 25px; height: 25px; border: 0;">
+                                    <img src="./img/facebook.png" alt="Facebook" style="display: block; width: 25px; height: 25px; border: 0;">
                                   </a>
                                 </td>
                               </tr>
