--- a/Subscription - all forms/03 Subscription - buy + promo applied.html
+++ b/Subscription - all forms/03 Subscription - buy + promo applied.html
@@ -668,11 +668,13 @@
                         value="terms"
                       >
                       <div class="subscription-radio"></div>
-                      <span>Прочитал(-а) и принимаю</span>
-                      <a href="/">
-                        Terms & Conditions
-                      </a>
-                      .
+                      <div class="subscription-text">
+                        <span>Прочитал(-а) и принимаю</span>
+                        <a href="/">
+                          Terms & Conditions
+                        </a>
+                        .
+                      </div>
                     </label>
                   </div>
                   <div class="subscription__payment-type_list">
